# agent-recipes

./: README.md  pyproject.toml  requirements.txt
00. Prompt Chaining/: helpers.py  prompt_chaining.py
01. Routing/: helpers.py  routing.py
02. Parallelization/: helpers.py  parallelization.py
03. Orchestrator-workers/: helpers.py  orchestrator-workers.py
04. Evaluator-optimizer/: evaluator_optimizer.py  helpers.py
