[project]
name = "agent-recipes"
version = "0.1.0"
description = "Implementing agent recipes"
authors = [
    {name = "tofaramususa",email = "jtofaramususa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "together (>=1.3.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
